--- a/package.json
+++ b/package.json
@@ -11,6 +11,11 @@
     "test:watch": "npm run test -- --watch"
   },
   "dependencies": {
+    "@chakra-ui/next-js": "^2.1.5",
+    "@chakra-ui/react": "^2.8.0",
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
+    "framer-motion": "^10.16.1",
     "next": "^13.4.19",
     "next-pwa": "^5.6.0",
     "nextjs-toploader": "^1.4.2",
