--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "next-boilerplate",
+  "name": "eteavs",
   "version": "1.1.2",
   "scripts": {
     "dev": "next dev",
@@ -8,7 +8,8 @@
     "lint": "eslint src --max-warnings=0",
     "prepare": "husky install",
     "test": "jest",
-    "test:watch": "npm run test -- --watch"
+    "test:watch": "npm run test -- --watch",
+    "theme": "chakra-cli tokens ./src/styles/theme.ts"
   },
   "dependencies": {
     "@chakra-ui/next-js": "^2.1.5",
@@ -20,10 +21,13 @@
     "next-pwa": "^5.6.0",
     "nextjs-toploader": "^1.4.2",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-icons": "^4.10.1",
+    "zustand": "^4.4.1"
   },
   "devDependencies": {
     "@babel/preset-typescript": "^7.16.7",
+    "@chakra-ui/cli": "^2.4.1",
     "@next/eslint-plugin-next": "^13.4.19",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.1.1",
