--- a/public/manifest.json
+++ b/public/manifest.json
@@ -2,8 +2,8 @@
   "name": "ETE Ariano Vilar Suassuna",
   "description": "Site para a Escola Técnica Estadual Ariano Vilar Suassuna.",
   "short_name": "ETE AVS",
-  "theme_color": "#D69E2E",
-  "background_color": "#1A365D",
+  "theme_color": "#3182CE",
+  "background_color": "#FFFFFF",
   "start_url": "/",
   "display": "standalone",
   "orientation": "portrait",
