--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.10.1",
+    "react-player": "^2.12.0",
     "zustand": "^4.4.1"
   },
   "devDependencies": {
