--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "prepare": "husky install",
     "test": "jest",
     "test:watch": "npm run test -- --watch",
-    "theme": "chakra-cli tokens ./src/styles/theme.ts"
+    "theme": "chakra-cli tokens ./src/styles/theme.ts",
+    "deploy": "next build && next export && node ./scripts/deploy.js"
   },
   "dependencies": {
     "@chakra-ui/next-js": "^2.1.5",
@@ -37,12 +38,14 @@
     "@types/react": "^18.2.20",
     "@typescript-eslint/eslint-plugin": "^5.21.0",
     "@typescript-eslint/parser": "^5.21.0",
+    "dotenv": "^16.3.1",
     "eslint": "8.14.0",
     "eslint-config-next": "^13.1.2",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-react": "^7.29.4",
     "eslint-plugin-react-hooks": "^4.5.0",
+    "ftp-deploy": "^2.4.4",
     "husky": "^7.0.4",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^29.3.1",
