feat: add footer and testing about

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -42,6 +42,15 @@
       {
         "endOfLine": "auto"
       }
+    ],
+    "react/no-unknown-property": [
+      "error",
+      {
+        "ignore": [
+          "jsx",
+          "global"
+        ]
+      }
     ]
   }
 }
