--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "next-pwa": "^5.6.0",
     "nextjs-toploader": "^1.4.2",
     "react": "^18.2.0",
+    "react-countdown": "^2.3.5",
     "react-dom": "^18.2.0",
     "react-icons": "^4.10.1",
     "react-player": "^2.12.0",
