--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-dom": "^18.2.0",
     "react-icons": "^4.10.1",
     "react-player": "^2.12.0",
+    "swiper": "^8.1.4",
     "zustand": "^4.4.1"
   },
   "devDependencies": {
