refactor: code organization

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,5 +1,5 @@
 {
-  "name": "ETE Ariano Vilar Suassuna",
+  "name": "Escola Técnica Estadual Ariano Vilar Suassuna",
   "description": "Site para a Escola Técnica Estadual Ariano Vilar Suassuna.",
   "short_name": "ETE AVS",
   "theme_color": "#3182CE",
