--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "build": "next build",
     "start": "next start",
     "lint": "eslint src --max-warnings=0",
+    "lint:fix": "npm run lint -- --fix",
     "prepare": "husky install",
     "test": "jest",
     "test:watch": "npm run test -- --watch",
