--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "start": "next start",
     "lint": "eslint src --max-warnings=0",
     "lint:fix": "npm run lint -- --fix",
+    "generate-ts-types": "graphql-codegen --config graphql.config.yml",
     "prepare": "husky install",
     "test": "jest",
     "test:watch": "npm run test -- --watch",
@@ -19,16 +20,26 @@
     "@chakra-ui/react": "^2.8.0",
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
+    "@graphql-codegen/cli": "^5.0.0",
+    "@graphql-codegen/typed-document-node": "^5.0.1",
+    "@graphql-codegen/typescript": "^4.0.1",
+    "@graphql-codegen/typescript-operations": "^4.0.1",
+    "@graphql-typed-document-node/core": "^3.2.0",
     "framer-motion": "^10.16.1",
     "next": "^13.4.19",
     "next-pwa": "^5.6.0",
-    "nextjs-toploader": "^1.4.2",
+    "next-seo": "^6.4.0",
+    "nextjs-progressbar": "^0.0.16",
+    "parse-numeric-range": "^1.3.0",
     "react": "^18.2.0",
     "react-countdown": "^2.3.5",
     "react-dom": "^18.2.0",
     "react-icons": "^4.10.1",
+    "react-markdown": "^9.0.1",
     "react-player": "^2.12.0",
+    "react-syntax-highlighter": "^15.5.0",
     "react-wavify": "^1.9.0",
+    "rehype-raw": "^7.0.0",
     "swiper": "^8.1.4",
     "vlibras-nextjs": "^1.1.2",
     "zustand": "^4.4.1"
@@ -36,6 +47,7 @@
   "devDependencies": {
     "@babel/preset-typescript": "^7.16.7",
     "@chakra-ui/cli": "^2.4.1",
+    "@graphql-codegen/add": "^5.0.0",
     "@next/eslint-plugin-next": "^13.4.19",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.1.1",
