--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "@graphql-codegen/typescript": "^4.0.1",
     "@graphql-codegen/typescript-operations": "^4.0.1",
     "@graphql-typed-document-node/core": "^3.2.0",
+    "@tanstack/react-query": "^5.8.4",
+    "date-fns": "^2.30.0",
     "framer-motion": "^10.16.1",
     "next": "^13.4.19",
     "next-pwa": "^5.6.0",
@@ -40,6 +42,7 @@
     "react-syntax-highlighter": "^15.5.0",
     "react-wavify": "^1.9.0",
     "rehype-raw": "^7.0.0",
+    "sharp": "^0.32.6",
     "swiper": "^8.1.4",
     "vlibras-nextjs": "^1.1.2",
     "zustand": "^4.4.1"
