--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "sharp": "^0.32.6",
     "swiper": "^8.1.4",
     "vlibras-nextjs": "^1.1.2",
+    "yet-another-react-lightbox": "^3.15.2",
     "zustand": "^4.4.1"
   },
   "devDependencies": {
