--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "nextjs-progressbar": "^0.0.16",
     "parse-numeric-range": "^1.3.0",
     "react": "^18.2.0",
+    "react-awesome-reveal": "^4.2.7",
     "react-countdown": "^2.3.5",
     "react-dom": "^18.2.0",
     "react-icons": "^4.10.1",
