refactor: site description change

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
   "name": "Escola Técnica Estadual Ariano Vilar Suassuna",
-  "description": "Site para a Escola Técnica Estadual Ariano Vilar Suassuna.",
+  "description": "A 43ª Escola Técnica Estadual (ETE) inaugurada em 5 de julho de 2018, e a primeira de Garanhuns, possuindo ensino médio integrado, subsequente e a distância.",
   "short_name": "ETE AVS",
   "theme_color": "#1A365D",
   "background_color": "#FFFFFF",
